main/default/objects/Building_Access_Availability__c/fields/Access_Method__c.field-meta.xml
<CustomField>
    <fullName>Access_Method__c</fullName>
    <label>Access Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EoC</fullName>
            </value>
            <value>
                <fullName>EoF</fullName>
            </value>
            <value>
                <fullName>EoNNI</fullName>
            </value>
            <value>
                <fullName>EoTDM</fullName>
            </value>
            <value>
                <fullName>Broadband</fullName>
            </value>
            <value>
                <fullName>DSL</fullName>
            </value>
            <value>
                <fullName>HDSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>