main/default/objects/Building_Access_Availability__c/fields/Access_Technology__c.field-meta.xml
<CustomField>
    <fullName>Access_Technology__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Access Technology related to Access Method (one-to-one).</description>
    <label>Access Technology</label>
    <referenceTo>Access_Technology__c</referenceTo>
    <relationshipName>Access_Availabilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>