main/default/objects/Building_Access_Availability__c/fields/Available_Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Available_Bandwidth__c</fullName>
    <label>Available Bandwidth</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>