main/default/objects/Building_Access_Availability__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Building Access Availabilities</relationshipLabel>
    <relationshipName>Access_Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>