main/default/objects/Building_Access_Availability__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>CarrierNNI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>