main/default/objects/Building_Access_Availability__c/fields/Maximum_Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Bandwidth__c</fullName>
    <label>Maximum Bandwidth (Mbps)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>