main/default/objects/Building_Access_Availability__c/fields/Net_Classification__c.field-meta.xml
<CustomField>
    <fullName>Net_Classification__c</fullName>
    <formula>Text(Building__r.Net_Classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Classification</label>
    <type>Text</type>
</CustomField>