main/default/objects/Building_Access_Availability__c/fields/Total_Capital__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital__c</fullName>
    <label>Total Capital</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>