main/default/objects/Building_Access_Availability__c/fields/Wholesale_Hurdle__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Hurdle__c</fullName>
    <label>Wholesale Hurdle</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>