main/default/objects/Building_Access_Availability__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Building__c</columns>
    <columns>Status__c</columns>
    <columns>Access_Technology__c</columns>
    <columns>Maximum_Bandwidth__c</columns>
    <columns>Minimum_Required_Revenue__c</columns>
    <columns>Net_Classification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/1/2014 12:00 AM</value>
    </filters>
    <filters>
        <field>Access_Technology__c</field>
        <operation>equals</operation>
        <value>EoF</value>
    </filters>
    <label>All</label>
</ListView>