main/default/objects/Building_Access_Availability__c/listViews/ICB_and_Auto_Augment.listView-meta.xml
<ListView>
    <fullName>ICB_and_Auto_Augment</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Building__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Auto-Augment,ICB</value>
    </filters>
    <label>ICB and Auto-Augment</label>
</ListView>